--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/character1.png" />
-    <meta name="description" content="asas-frontend developer">
-    <meta name="author" content="Åsa Jomsson">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Workshop 2</title>
-  </head>
-  <body>
-  <div id="root"></div>
+    <title>WorkShop 2</title>
+</head>
+
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 </body>
+
 </html>
